// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render image swatch 1`] = `
<button
  title="test"
  type="button"
>
  <ImageSwatch
    label="test"
    swatchData="imgSrc"
  />
</button>
`;

exports[`render text swatch 1`] = `
<button
  title="test"
  type="button"
>
  <TextSwatch
    label="test"
  />
</button>
`;
